--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/biz-udpgothic": "^5.1.1",
     "astro": "^5.1.9"
+  },
+  "devDependencies": {
+    "unocss": "^65.4.3"
   }
 }
