--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@fontsource/biz-udpgothic": "^5.1.1",
-    "astro": "^5.1.9"
+    "astro": "^5.1.9",
+    "astro-compress": "^2.3.6",
+    "astro-google-fonts-optimizer": "^0.2.2"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "cssnano": "^7.0.6"
   }
 }
