--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.1.9",
-    "fontkit": "^2.0.4"
+    "fontkit": "^2.0.4",
+    "fontmin": "^2.0.0"
   },
   "devDependencies": {
     "@types/fontkit": "^2.0.7"
