--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.5",
     "astro": "^5.1.9",
     "fontkit": "^2.0.4",
-    "fontmin": "^2.0.0"
+    "fontmin": "^2.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/fontkit": "^2.0.7"
