--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "astro": "^5.1.9",
     "fontkit": "^2.0.4",
     "fontmin": "^2.0.0",
+    "gulp-rename": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@types/fontkit": "^2.0.7"
+    "@types/fontkit": "^2.0.7",
+    "@types/gulp-rename": "^2.0.6"
   }
 }
