--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.5",
     "astro": "^5.1.9",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
     "fontkit": "^2.0.4",
     "fontmin": "^2.0.0",
     "gulp-rename": "^2.0.0",
