--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fontkit": "^2.0.4",
     "fontmin": "^2.0.0",
     "gulp-rename": "^2.0.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
