--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fontmin": "^2.0.0",
     "gulp-rename": "^2.0.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/fontkit": "^2.0.7",
